# react-native-matrix-rust-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  package.json  react-native-matrix-rust-sdk.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/matrixrustsdk/: MatrixRustSdkModule.java  MatrixRustSdkPackage.java
cpp/: react-native-matrix-rust-sdk.cpp  react-native-matrix-rust-sdk.h
example/: app.json  metro.config.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/matrixrustsdkexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/MatrixRustSdkExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/MatrixRustSdkExample.xcodeproj/: project.pbxproj
example/ios/MatrixRustSdkExample.xcodeproj/xcshareddata/xcschemes/: MatrixRustSdkExample.xcscheme
example/ios/MatrixRustSdkExampleTests/: MatrixRustSdkExampleTests.m
example/src/: App.tsx
ios/: MatrixRustSdk.h  MatrixRustSdk.mm
scripts/: bootstrap.sh
src/: NativeMatrixRustSdk.ts  index.tsx
